--- a/app/frontend/src/app/components/signup/signup.component.html
+++ b/app/frontend/src/app/components/signup/signup.component.html
@@ -41,15 +41,15 @@
       </div>
       <div class="input-group">
            <div class="input-field">
-              <input type="text" class="input-box" id="regUsername" required>
+              <input type="text" class="input-box" id="regUsername" [(ngModel)]="username"  required>
               <label for="regUsername">Username</label>
            </div>
            <div class="input-field">
-              <input type="text" class="input-box" id="regEmail"  required>
+              <input type="text" class="input-box" id="regEmail" [(ngModel)]="email" required>
               <label for="regEmail">Email address</label>
            </div>
            <div class="input-field">
-              <input type="password" class="input-box" id="regPassword"  required>
+              <input type="password" class="input-box" id="regPassword" [(ngModel)]="password" required>
               <label for="regPassword">Password</label>
               <div class="eye-area">
                 <div class="eye-box" (click)="myRegPassword()">
@@ -64,7 +64,7 @@
               <label for="formCheck2">Remember Me</label>
            </div>
            <div class="input-field">
-              <input type="submit" class="input-submit" value="Sign Up" required>
+              <input type="submit" class="input-submit" value="Sign Up" (click)="registerUser()">
            </div>
       </div>
    </div>
