--- a/app/frontend/src/app/components/signup/signup.component.html
+++ b/app/frontend/src/app/components/signup/signup.component.html
@@ -11,11 +11,11 @@ class="container"
       </div>
       <div class="input-group">
            <div class="input-field">
-              <input type="text" class="input-box" id="logEmail" required>
-              <label for="logEmail">Email address</label>
+              <input type="text" class="input-box" id="logUsername" [(ngModel)]="logUsername" required>
+              <label for="logUsername">Username</label>
            </div>
            <div class="input-field">
-              <input type="password" class="input-box" id="logPassword" required>
+              <input type="password" class="input-box" id="logPassword" [(ngModel)]="logPassword" required>
               <label for="logPassword">Password</label>
               <div class="eye-area">
                <div  class="eye-box" (click)="myLogPassword()">
@@ -29,7 +29,7 @@ class="container"
               <label for="formCheck">Remember Me</label>
            </div>
            <div class="input-field">
-              <input type="submit" class="input-submit" value="Sign In" required>
+              <input type="submit" class="input-submit" value="Sign In"  (click)="authLogin()" required>
            </div>
            <div class="forgot">
               <a href="#">Forgot password?</a>
